<resources>
    <string name="app_name">RS Camera</string>
    <string name="title_activity_file_browser">FileBrowserActivity</string>
    <string name="intent_extra_file_path">filePath</string>
    <string name="app_settings">settings</string>
    <string name="show_update_firmware">show_update_firmware</string>
    <string name="firmware_update_request">firmware_update_request</string>
    <string name="firmware_update_required">firmware_update_required</string>
    <string name="firmware_update_file_path">firmware_update_file_path</string>
    <string name="browse_folder">browse_folder</string>
    <string name="realsense_folder">realsense</string>
    <string name="show_3d">show_3d</string>
    <string name="terminal_commands_file">terminal_commands_file</string>
    <string name="terminal_auto_complete">terminal_auto_complete</string>
    <string name="fw_logging">fw_logging</string>
    <string name="fw_logging_file_path">fw_logging_file_path</string>
    //Calibration stings
    <string name="write_to_camera">Write to camera</string>
    <string name="calibration">Calibration</string>
    <string name="tare">Tare</string>
    <string name="projector_off">Projector off</string>
    <string name="projector_on">Projector on</string>
    <string name="original">Original</string>
    <string name="calibrated">Calibrated</string>
    <string name="tare_instructions_string">Remember to locate the camera in front of a flat surface. Distance from camera to flat surface should be entered below.</string>
    <string name="tare_distance_label_string">Distance to flat surface in mm :</string>
    <string name="tare_advanced_options_string">Advanced Options:</string>
    <string name="average_step_count">Average Step Count (1-30)</string>
    <string name="step_count">Step Count (5-30)</string>
    <string name="tare_accuracy_string">Accuracy</string>
</resources>
