<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <TextView
        android:id="@+id/tare_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Small"
        android:text="@string/tare_instructions_string" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <TextView
        android:id="@+id/tare_distance_label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/tare_distance_label_string" />

    <EditText
        android:id="@+id/tare_distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Distance [mm]" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <!-- Advanced options -->
    <TextView
        android:id="@+id/tare_advanced_options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Large"
        android:text="@string/tare_advanced_options_string" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <!-- Average Step Count -->
    <TextView
        android:id="@+id/tare_avg_step_count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:paddingLeft="15dp"
        android:text="@string/average_step_count" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/tare_avg_step_count_seekBar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:max="31"
            android:min="1"
            android:progress="20"/>

        <TextView
            android:id="@+id/tare_avg_step_count_current_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="20"/>
    </RelativeLayout>

    <!-- Step Count -->
    <TextView
        android:id="@+id/tare_step_count_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/step_count" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
        android:id="@+id/tare_step_count_seekBar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:min="5"
        android:progress="20" />

    <TextView
        android:id="@+id/tare_step_count_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:text="20"/>
    </RelativeLayout>

    <!-- Accuracy -->
    <TextView
        android:id="@+id/tare_accuracy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        style="@android:style/TextAppearance.Medium"
        android:text="@string/tare_accuracy_string" />
    <Spinner
        android:id="@+id/tare_accuracy_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <!-- Progress Bar -->
    <TextView
        android:id="@+id/tare_progress_bar_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/TextAppearance.Medium"
        android:text="Tare process in progress..."
        android:visibility="invisible"/>
    <!---->
    <ProgressBar
        android:id="@+id/tare_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        android:visibility="invisible"/>
        <!---->


</LinearLayout>